--- a/Data/Ambiguity Dictionary/Raw File/JoinAmbDict.ipynb
+++ b/Data/Ambiguity Dictionary/Raw File/JoinAmbDict.ipynb
@@ -25,7 +25,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -56,7 +56,7 @@
       "metadata": {
         "id": "2Upj643nKgPc"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -74,7 +74,7 @@
       "metadata": {
         "id": "2kbZKvzgPfJf"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -85,7 +85,7 @@
       "metadata": {
         "id": "V7GTdbqkQ3he"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -96,7 +96,7 @@
       "metadata": {
         "id": "r-7CnOozRyEt"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -109,7 +109,243 @@
       "metadata": {
         "id": "7kaHJyAORvmw"
       },
-      "execution_count": 14,
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "len(amb_dict)"
+      ],
+      "metadata": {
+        "id": "f04egWwRSIt-",
+        "outputId": "af34cb82-8c67-4d49-935c-b2d802cd6881",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "3757"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 15
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "list2 = ['air',\n",
+        "'jam',\n",
+        "'cat',\n",
+        "'cap',\n",
+        "'main',\n",
+        "'beg',\n",
+        "'fail'\n",
+        "]"
+      ],
+      "metadata": {
+        "id": "gWzyqLq_fNFQ"
+      },
+      "execution_count": 24,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "amb_dict = np.unique(list(amb_dict)+list2)"
+      ],
+      "metadata": {
+        "id": "I2KRvHo8fW7j"
+      },
+      "execution_count": 29,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "len(amb_dict)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Akd8dfxsfzDY",
+        "outputId": "c82f9dd2-322f-4045-a586-bfb8fbcc6f3a"
+      },
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "3757"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 30
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "amb_dict"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "4lz8OddIwVay",
+        "outputId": "280b0d3b-a855-4aa5-8df2-423753293ecb"
+      },
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array(['ABC', 'AD', 'AIDS', ..., 'zona', 'zoonosis', 'zulu'], dtype='<U16')"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 31
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import nltk\n",
+        "nltk.download('words')\n",
+        "from nltk.corpus import words"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "kLRtdnlAxBu5",
+        "outputId": "d24c4146-adac-4011-d6d2-a31144ee0edb"
+      },
+      "execution_count": 40,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "[nltk_data] Downloading package words to /root/nltk_data...\n",
+            "[nltk_data]   Package words is already up-to-date!\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "final_amb_dict = []\n",
+        "for w in amb_dict:\n",
+        "      if w in words.words():\n",
+        "        final_amb_dict.append(w)"
+      ],
+      "metadata": {
+        "id": "HDG82uSSyfJz"
+      },
+      "execution_count": 41,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "len(final_amb_dict)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "A1ro8WBtys-h",
+        "outputId": "8394eb43-2966-4e3f-e133-be12fc7b9fd5"
+      },
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "2723"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 42
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "loss = set(amb_dict) - set(final_amb_dict)"
+      ],
+      "metadata": {
+        "id": "mlv76rlIyv9Z"
+      },
+      "execution_count": 46,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "len(loss)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "bHeQRG3A0h65",
+        "outputId": "cae9d1ee-2913-4445-9b22-8e7278fdc32c"
+      },
+      "execution_count": 47,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1034"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 47
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "with open('/content/drive/MyDrive/PhD/Research/Dictionary/sorted_amb_from_dict_full_checked.txt', 'w') as f:\n",
+        "    for line in amb_dict:\n",
+        "        f.write(\"%s\\n\" % line)"
+      ],
+      "metadata": {
+        "id": "-AfDrL_Py3oO"
+      },
+      "execution_count": 48,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "with open('/content/drive/MyDrive/PhD/Research/Dictionary/sorted_amb_from_dict_loss_checked.txt', 'w') as f:\n",
+        "    for line in amb_dict:\n",
+        "        f.write(\"%s\\n\" % line)"
+      ],
+      "metadata": {
+        "id": "KAMVcyh10nF8"
+      },
+      "execution_count": 50,
       "outputs": []
     }
   ]
